# vc-emotion_detection

./: .gitignore  Dockerfile  README.md  compose.yaml  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py
audit/: predictions.txt
docs/: conf.py
flask_app/: app.py  requirements.txt
flask_app/templates/: index.html
src/features/: feature_engineering.py
