[project]
name = "vc-emotion-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.6.3",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "mlflow>=3.6.0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
